<?xml version="1.0" encoding="utf-8" ?>
<resources>
    
    <item type="id" name="item_view_left"></item>
    <item type="id" name="item_view_right"></item>
    <item type="id" name="item_view_delete"></item>

    <string name="app_name">Card View</string>

    <string name="deck_view_empty_message">Nothing here</string>

    <!-- Content description to tell the user that this button will remove an application from recents -->
    <string name="accessibility_item_will_be_dismissed">Dismiss </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="action_set_two">2张卡片</string>
    <string name="action_set_four">4张卡片</string>
    <string name="action_set_ten">10张卡片</string>
    <string name="action_set_hundred">100张卡片</string>
    <string name="action_set_five_hundred">500张卡片</string>
    <string name="action_set_thousand">1000张卡片</string>
</resources>
